--- a/templates/config.j2
+++ b/templates/config.j2
@@ -426,5 +426,11 @@
     {% endfor %}
     </kafka_{{ kafka_topic }}>
 {% endfor %}
-
+    <prometheus>
+        <endpoint>/metrics</endpoint>
+        <port>8001</port>
+        <metrics>true</metrics>
+        <events>true</events>
+        <asynchronous_metrics>true</asynchronous_metrics>
+    </prometheus>
 </yandex>
